[package]
name = "linux-bsec-exporter"
description = "Export Bosch BSEC outputs to Prometheus."
version = "0.1.0"
authors = ["Jan Gosmann <jan@hyper-world.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bme680 = "0.5.1"
bsec = { version = "0.2.0", features = ["use-bme680"] }
lazy_static = "1.4.0"
linux-embedded-hal = "0.3.0"
nb = "1.0.0"
prometheus = "0.11.0"
tide = "0.16.0"
tokio = { version = "1.1.0", features = ["macros", "sync", "rt", "signal", "time"] }

[dev-dependencies]
serial_test = "0.5.1"
bsec = { version = "0.2.0", features = ["use-bme680", "test-support"] }
protobuf = "2.23.0"
tempfile = "3.2.0"
