[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
categories = ["embedded"]
description = "Export Bosch BSEC outputs to Prometheus."
edition = "2018"
keywords = ["bsec", "prometheus"]
license = "MIT OR Apache-2.0"
name = "linux-bsec-exporter"
readme = "README.md"
repository = "https://github.com/jgosmann/linux-bsec-exporter"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bme680 = "0.6.0"
bsec = {version = "0.5.0", features = ["use-bme680"]}
embedded-hal = "0.2.5"
lazy_static = "1.4.0"
libsystemd = "0.6.0"
linux-embedded-hal = "0.3.0"
nb = "1.0.0"
prometheus = "0.13.3"
serde = {version = "1.0", features = ["derive"]}
tide = "0.16.0"
tokio = {version = "1.1.0", features = ["macros", "sync", "rt", "signal", "time"]}
toml = "0.7.2"

[dev-dependencies]
bsec = {version = "0.5.0", features = ["use-bme680", "test-support"]}
protobuf = "2.23.0"
serial_test = "1.0.0"
tempfile = "3.3.0"
